--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "vant": "2.12.47",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -16,6 +17,9 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.5.0",
     "@vue/cli-service": "^4.5.0",
+    "babel-plugin-import": "^1.13.5",
+    "less": "^4.1.2",
+    "less-loader": "^5.0.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
